update colors to fix contrast issues

--- a/src/components/uploader/style.css
+++ b/src/components/uploader/style.css
@@ -7,7 +7,7 @@
   border: 2px dashed var(--primary);
   border-radius: 10px;
   background-color: var(--secondary-bg);
-  color: #BDBDBD;
+  color: #545454;
 }
 
 #file ~ p {
