--- a/src/style/index.css
+++ b/src/style/index.css
@@ -18,7 +18,7 @@ html, body {
 h1, h2, h3, h4, h5, h6, h7 {margin-bottom: 0;}
 
 #app {
-	--primary: #2F80ED;
+	--primary: #0E51AA;
 	--border-color: #E0E0E0;
 	--secondary-bg: #F6F8FB;
 	--success: #219653;
